--- a/renderer/src/styles/vars.scss
+++ b/renderer/src/styles/vars.scss
@@ -36,4 +36,8 @@ html {
   --address-bar-url-background: #edf2fa;
   --address-bar-url-background-hover: #e1e6ed;
   --address-bar-url-background-active: #ffffff;
+
+  --address-bar-url-btn-background: #ffffff;
+  --address-bar-url-btn-background-hover: #ffffff;
+  --address-bar-url-btn-background-active: #ffffff;
 }
